--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/flor1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invitación de Cumpleaños Samantha</title>
+    <title>Invitación de Cumpleaños Samantha Morúa</title>
   </head>
   <body>
     <div id="root"></div>
